--- a/tp-integrador/index.html
+++ b/tp-integrador/index.html
@@ -24,7 +24,7 @@
           <span class="title fs-5">Conf Bs As</span>
         </div>
 
-        <ul class="nav align-items-center me-5 gap-2">
+        <ul class="nav align-items-center justify-content-end me-5 gap-2">
           <li class="nav-item">
             <a
               href="#"
@@ -75,25 +75,22 @@
         <div class="carousel-item active">
           <img
             src="imgs/Carrucel/hawaii.jpg"
-            class="d-block w-100"
+            class="d-block w-100 imagen"
             alt="hawaii"
-            data-bs-interval="1500"
           />
         </div>
         <div class="carousel-item">
           <img
             src="imgs/Carrucel/hawaii2.jpg"
-            class="d-block w-100"
+            class="d-block w-100 imagen"
             alt="hawaii2"
-            data-bs-interval="1500"
           />
         </div>
         <div class="carousel-item">
           <img
             src="imgs/Carrucel/hawaii3.jpg"
-            class="d-block w-100"
+            class="d-block w-100 imagen"
             alt="hawaii3"
-            data-bs-interval="1500"
           />
         </div>
       </div>
