--- a/tp-integrador/index.html
+++ b/tp-integrador/index.html
@@ -58,6 +58,7 @@
             <a
               href="#"
               class="nav-link link-success link-underline-opacity-25 text-success"
+              id="buyTickets"
               >Comprar tickets</a
             >
           </li>
@@ -100,14 +101,14 @@
           <p class="card-text text-light text-end w-50 me-5">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los Oradores de primer nivel que tenemos para ti. Te esperamos!</p>
           <div class="d-flex justify-content-end me-5">
             <button class="btn btn-outline-light btn-lg">Quiero ser orador</button>
-            <button class="btn btn-success ms-3  btn-lg">Comprar tickets</button>
+            <button class="btn btn-success ms-3  btn-lg" id="buyTicketsCarroucel">Comprar tickets</button>
           </div>
         </div>
       </div>
     </section>
 
 
-    <section class="container-xxl d-flex flex-column align-items-center justify-content-center">
+    <section class="container-xxl" id="Oradores">
       <div class="d-flex flex-column align-items-center ">
         <span class="pt-3">CONOCE A LOS</span>
         <h1 class="fs-2">ORADORES</h1>
@@ -150,39 +151,112 @@
       </div>
     </section>
 
-    <section class="d-flex">
-      <img src="imgs/honolulu.jpg" alt="img-BsAs" width="50%">
-      <div class="container-fluid bsas__Octubre w-50 p-3">
-        <h1 class="parrafo fs-2">Bs As - Octubre</h1>
-        <p class="parrafo ">Buenos Aires es la provincia y localidad más grande del estado de Argentina,en los Estados Unidos. Honolulu es la mas sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
-        <button class="btn btn-outline-light">Conoce más</button>
+    <section class="" id="Bs-As">
+      <div class="d-flex">
+        <img src="imgs/honolulu.jpg" alt="img-BsAs" width="50%">
+        <div class="container-fluid bsas__Octubre w-50 p-3">
+          <h1 class="parrafo fs-2">Bs As - Octubre</h1>
+          <p class="parrafo ">Buenos Aires es la provincia y localidad más grande del estado de Argentina,en los Estados Unidos. Honolulu es la mas sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
+          <button class="btn btn-outline-light">Conoce más</button>
+        </div>
       </div>
     </section>
 
-    <section class="form d-flex align-items-center flex-column justify-content-center p-3">
-      <div class="d-flex align-items-center flex-column m-3">
-        <span class="fs-6">CONVIÉRTETE EN UN</span>
-        <h4>ORADOR</h4>
-        <h6 class="subtitulo__orador">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</h6>
+    <section class="" id="conviertete-en-Orador">
+      <div class="form d-flex align-items-center flex-column justify-content-center p-3">
+        <div class="d-flex align-items-center flex-column m-3">
+          <span class="fs-6">CONVIÉRTETE EN UN</span>
+          <h4>ORADOR</h4>
+          <h6 class="subtitulo__orador">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</h6>
+        </div>
+        <div class="container align-items-center w-50">
+          <div class="input-group mb-3 gap-3">
+            <input type="text" class="form-control" placeholder="Nombre" >
+            <input type="text" class="form-control" placeholder="Apellido">
+          </div>
+          <div class="mb-3">
+            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Sobre qué quieres hablar?" rows="3"></textarea>
+            <span class="texto">Recuerda incluir un título para tu charla</span>
+          </div>
+          <div class="d-grid gap-2">
+            <button class="btn justify-content-center" id="btnenviar" type="button">Enviar</button>
+          </div>
+        </div>
       </div>
-      <div class="container align-items-center w-50">
-        <div class="input-group mb-3 gap-3">
-          <input type="text" class="form-control" placeholder="Nombre" >
-          <input type="text" class="form-control" placeholder="Apellido">
+    </section>
+
+    <section class="inactive" id="CompraTickets">
+      <div class="d-flex justify-content-center gap-2 m-5">
+
+        <div class="card border-primary mb-3" style="max-width: 18rem;">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h4 class="card-title p-2">Estudiante</h4>
+            <p class="card-text p-2">Tienen un descuento</p>
+            <strong class="card-text p-3">80%</strong>
+            <span class="fs-6 text-secondary p-1">*presentar documentación</span>
+          </div>
         </div>
-        <div class="mb-3">
-          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Sobre qué quieres hablar?" rows="3"></textarea>
-          <span class="texto">Recuerda incluir un título para tu charla</span>
+
+        <div class="card border-info mb-3" style="max-width: 18rem;">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h4 class="card-title p-2">Trainee</h4>
+            <p class="card-text p-2">Tienen un descuento</p>
+            <strong class="card-text font-weight-bold p-3" id="card-text">50%</strong>
+            <span class="fs-6 text-secondary p-1">*presentar documentación</span>
+          </div>
         </div>
-        <div class="d-grid gap-2">
-          <button class="btn justify-content-center" id="btnenviar" type="button">Enviar</button>
+
+        <div class="card border-warning mb-3" style="max-width: 18rem;">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h4 class="card-title p-2">Junior</h4>
+            <p class="card-text p-2">Tienen un descuento</p>
+            <strong class="card-text font-weight-bold p-3">15%</strong>
+            <span class="fs-6 text-secondary p-1">*presentar documentación</span>
+          </div>
         </div>
+
+      </div>
+
+      <div class="text-center">
+        <h6 class="text-secondary">VENTA</h6>
+        <h1>VALOR DE TICKET $200</h1>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <form action="" class="form-control m-4 d-flex justify-content-center flex-column border-0">
+          <div class="d-flex w-100 justify-content-center">
+            <input type="text" class="form-control w-25 m-1 p-2" placeholder="Nombre">
+            <input type="text" class="form-control w-25  m-1" placeholder="Apellido">
+          </div>
+          <div class="d-flex justify-content-center">
+            <input type="email" class="form-control w-50 p-2 m-2" placeholder="Correo">
+          </div>
+          <div class="d-flex justify-content-center align-items-center gap-2">
+            <div class="d-flex flex-column w-25">
+              <label for="cantidad" class="m-3">Cantidad</label>
+              <input type="number" class="form-control w-100 p-2 m-2" placeholder="Cantidad" id="cantidad">
+            </div>
+            <div class="d-flex flex-column w-25">
+              <label for="categoria" class="m-3">Categoría</label>
+              <input type="email" class="form-control w-100 p-2 m-2" placeholder="Categoría" id="categoria">
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div class="d-flex justify-content-center ">
+        <p class="w-50 p-3 bg-info bg-opacity-10 border border-info rounded fs-4 text-primary"> Total a Pagar: $ <span id="total"></span></p>
+      </div>
+
+      <div class="d-flex justify-content-center gap-3">
+        <button id="btnBorrar" class="btn btn-lg w-25 p-3 m-3 fs-3">Borrar</button>
+        <button id="btnResumen" class="btn btn-lg w-25 p-3 m-3 fs-3">Resumen</button>
       </div>
     </section>
     </main>
 
     <footer>
-      <div class=" container d-flex justify-content-center h-100">
+      <div class=" container d-flex justify-content-center h-100 p-3">
         <ul class="  navbar-nav d-flex flex-row gap-5 h-100 align-items-center">
           <li class="nav-item me-4"><a href="" id="footer_nav_link" class="nav-link link-underline-opacity-0 fs-6 ">Preguntas Frecuentes</a></li>
           <li class="nav-item me-4"><a href="" id="footer_nav_link" class="nav-link link-underline-opacity-0 fs-6 ">Contáctanos</a></li>
@@ -200,5 +274,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="JS/script.js"></script>
   </body>
 </html>
