--- a/tp-integrador/index.html
+++ b/tp-integrador/index.html
@@ -229,11 +229,11 @@
       <div class="d-flex justify-content-center">
         <form action="" class="form-control m-4 d-flex justify-content-center flex-column border-0">
           <div class="d-flex w-100 justify-content-center">
-            <input type="text" class="form-control w-25 m-1 p-2" placeholder="Nombre">
-            <input type="text" class="form-control w-25  m-1" placeholder="Apellido">
+            <input type="text" class="form-control w-25 m-1 p-2" placeholder="Nombre" id="Nombre">
+            <input type="text" class="form-control w-25  m-1" placeholder="Apellido" id="Apellido">
           </div>
           <div class="d-flex justify-content-center">
-            <input type="email" class="form-control w-50 p-2 m-2" placeholder="Correo">
+            <input type="email" class="form-control w-50 p-2 m-2" placeholder="Correo" id="correo">
           </div>
           <div class="d-flex justify-content-center align-items-center gap-2">
             <div class="d-flex flex-column w-25">
@@ -243,7 +243,7 @@
             <div class="d-flex flex-column w-25">
               <label for="categoria" class="m-3">Categoría</label>
               <select id="categoria" class="form-select w-100 p-2 m-2" aria-label="Default select example">
-                <option selected>Elige la categoría</option>
+                <option value="Elige la categoría">Elige la categoría</option>
                 <option value="estudiante">Estudiante</option>
                 <option value="trainee">Trainee</option>
                 <option value="junior">Junior</option>
